--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "webpack.config.js",
   "dependencies": {
     "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-scripts": "^3.4.3",
-    "react-dom": "^16.13.1"
+    "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -23,7 +24,7 @@
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
-    "start-dev": "webpack-dev-server",
+    "start:dev": "webpack-dev-server",
     "eslint": "eslint ./src/*.js"
   },
   "author": "",
