--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "eslint-plugin-react": "^7.20.6",
     "eslint-watch": "^7.0.0",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.7.2"
   },
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
-    "start:dev": "webpack-dev-server",
+    "start": "webpack-dev-server --open --hot --mode development",
     "eslint": "eslint ./src/*.js"
   },
   "author": "",
